# backoffxx

./: CMakeLists.txt  README.md
backoffxx/: CMakeLists.txt  attempt.h  backoff.h  backoffxx.h  policies.h
cmake/: compiler_msvc.cmake  compiler_posix.cmake
tests/: CMakeLists.txt  attempt_test.cpp  backoff_test.cpp  demo_test.cpp  policies_test.cpp
